--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/topstyle.css">
-    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:500&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <title>KATAKOTO カタコト</title>
   </head>
@@ -15,8 +15,12 @@
           <h1>　いいとこどりの ものづくり。</h1>
         </div>
         <img src="image/eye_logo01.png" alt="KATAKOTO" class="logo">
-
-      </div>
+        </div>
+        <p>最新情報はツイッターで！</p>
+        </div>
+        <a href="#">
+          <img src="image/btn_tw.png" alt="katakoto_std" class="tw_katakoto">
+        </a>
     </header>
     <div class="news">
       <div class="frame clearfix">
@@ -51,37 +55,58 @@
       <div class="frame clearfix">
         <div class="tiles clearfix">
           <div class="tile tile50">
-            <img src="image/pro_inai01.png" alt="inaiinaiehon" class="thumbnail">
-            <a href="#" class="title Name">いないいない絵本</a>
-            <a class="title" href="#">/</a>
-            <a href="#" class="title Year">2019</a>
+            <a href="product/inaiinai_ehon.html">
+            <img src="image/pro_inai01.png" alt="inaiinaiehon" class="thumbnail" >
+          </a>
+            <a href="product/inaiinai_ehon.html" class="blackNon">
+            <p class="title Name">いないいない絵本</p>
+            <p class="title">/</p>
+            <p class="title Year">2019</p>
+            </a>
+
           </div>
           <div class="tile tile50">
+            <a href="product/inaiinai_ehon.html">
             <img src="image/pro_sm01.png" alt="spellmaster" class="thumbnail">
-            <a href="#" class="title Name">SPELL MASTER</a>
-            <a class="title" href="#">/</a>
-            <a href="#" class="title Year">2018</a>
-          </div>
-          <div class="tile tile33">
-            <img src="image/pro_sl02.jpg" alt="skyletter" class="thumbnail">
-            <a href="#" class="title Name">SkyLetter</a>
-            <a class="title" href="#">/</a>
-            <a href="#" class="title Year">2019</a>
-          </div>
-          <div class="tile tile33">
-            <img src="image/pro_ch01.png" alt="CHIZUMA" class="thumbnail">
-            <section>
-              <a href="#" class="title Name">CHIZUMA</a>
-              <a class="title" href="#">/</a>
-              <a href="#" class="title Year">2017</a>
-            </section>
+          </a>
+            <a href="product/inaiinai_ehon.html" class="blackNon">
+            <p class="title Name">SPELL MASTER</p>
+            <p class="title">/</p>
+            <p class="title Year">2018</p>
+            </a>
           </div>
 
           <div class="tile tile33">
+            <a href="product/inaiinai_ehon.html">
+            <img src="image/pro_sl02.jpg" alt="skyletter" class="thumbnail">
+          </a>
+            <a href="product/inaiinai_ehon.html" class="blackNon">
+            <p class="title Name">SkyLetter</p>
+            <p class="title">/</p>
+            <p class="title Year">2019</p>
+            </a>
+          </div>
+
+          <div class="tile tile33">
+            <a href="product/inaiinai_ehon.html">
+            <img src="image/pro_ch01.png" alt="CHIZUMA" class="thumbnail">
+          </a>
+              <a href="product/inaiinai_ehon.html" class="blackNon">
+              <p class="title Name">CHIZUMA</p>
+              <p class="title">/</p>
+              <p class="title Year">2017</p>
+              </a>
+          </div>
+
+          <div class="tile tile33">
+            <a href="product/inaiinai_ehon.html">
             <img src="image/pro_pt01.jpg" alt="PAINTAR" class="thumbnail">
-            <a href="#" class="title Name">PAINTAR</a>
-            <a class="title" href="#">/</a>
-            <a href="#" class="title Year">2016</a>
+          </a>
+            <a href="product/inaiinai_ehon.html" class="blackNon">
+            <p class="title Name">PAINTAR</p>
+            <p class="title">/</p>
+            <p class="title Year">2016</p>
+            </a>
           </div>
         </div>
         <a href="#" >
@@ -128,9 +153,9 @@
 
         <div class="contactBox">
           <p>お名前</p>
-          <input type="text" value="　お名前/所属" class="box box1">
+          <input type="text" value="お名前/所属" class="box box1">
           <p>メールアドレス</p>
-          <input type="email" value="　◯◯◯@◇◇◇.com" class="box box1">
+          <input type="email" value="◯◯◯@◇◇◇.com" class="box box1">
           <p>お問い合わせ内容</p>
           <textarea name="name" rows="8" cols="80" class="box box2"></textarea>
           <input type="submit" value="メッセージを送る" class="send" >
@@ -139,14 +164,13 @@
     </div>
     <footer>
       <div class="frame">
-
       <div class="footLogo">
         <img src="image/foot_logo.png" alt="KATAKOTO" class="logo">
       </div>
 
         <ul class="footList clearfix">
           <li>リンク</li>
-          <li>プライバシーポリシー</li>
+          <li><a href="ather/privacy.html" class="blackNon">プライバシーポリシー</a></li>
         </ul>
       </div>
 
