--- a/product/inaiinai_ehon.html
+++ b/product/inaiinai_ehon.html
@@ -2,16 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/product.css">
+    <link rel="stylesheet" href="../css/topstyle.css">
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:500&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <title>KATAKOTO カタコト</title>
   </head>
-  <body>
+<body id="product">
 <div class="top">
   <div class="topBlock">
     <a href="../index.html">
-      <img src="../image/btn_back01.png" alt="トップにもどる" class="back">
+      <img src="../image/btn_back03.png" alt="トップにもどる" class="back">
     </a>
     <img src="../image/pro_inai_logo.png" alt="" class="proLogo">
     <h2>「物語の主人公になりきる」 から 「物語の一部」へ</h2>
@@ -23,6 +23,8 @@
 <div class="contents">
   <div class="frame">
     <div class="content01">
+
+<img src="../image/sk_inai01.PNG" alt="" class="ProductPic">
 
   <div class="text01 mainText">
     <p>「いないいない絵本」は<br>
@@ -66,19 +68,15 @@
 
 </div>
 <footer>
-  <div class="frame2">
-
-  <div class="footLogo">
-    <a href="../index.html">
-    <img src="../image/foot_logo.png" alt="KATAKOTO" class="logo">
+  <div class="frame" >
+    <a class="footLogo" href="../index.html">
+      <img src="../image/foot_logo.png" alt="KATAKOTO" class="logo">
     </a>
-  </div>
-
     <ul class="footList clearfix">
       <li>リンク</li>
-      <li><a href="../ather/privacy.html" class="blackNon">プライバシーポリシー</a></li>
+      <li><a href="../other/privacy.html" class="blackNon">プライバシーポリシー</a></li>
     </ul>
   </div>
-</footer>
+ </footer>
   </body>
 </html>
