--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
 
     <header id="top">
-      <video playsinline autoplay muted loop>
-        <source src="image/web_back.mp4" type="video/mp4">
+      <video playsinline muted autoplay loop>
+        <source src="image/web_back.m4v" type="video/mp4">
       </video>
       <div class="frame">
         <div class="copy">
