--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
       </video>
       <div class="frame">
         <div class="copy">
-          <h1>デジタル ・アナログの</h1>
-          <h1>　いいとこどりの ものづくり。</h1>
         </div>
-        <img src="image/eye_logo01.png" alt="KATAKOTO" class="logo">
+        <img src="image/eye_catch02.png" alt="KATAKOTO" class="catch copy">
+        <img src="image/eye_logo01.png" alt="KATAKOTO" class="catch logo">
         </div>
           <p>最新情報はツイッターで！</p>
         </div>
