--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:500&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <title>KATAKOTO カタコト</title>
+    <link rel="shortcut icon" href="image/favicon.ico">
   </head>
 
   <body>
@@ -15,8 +16,6 @@
         <source src="image/web_back.m4v" type="video/mp4">
       </video>
       <div class="frame">
-        <div class="copy">
-        </div>
         <img src="image/eye_catch02.png" alt="KATAKOTO" class="catch copy">
         <img src="image/eye_logo01.png" alt="KATAKOTO" class="catch logo">
         </div>
@@ -30,26 +29,22 @@
     <div id="news">
       <div class="frame clearfix">
         <div class="newsframes">
-          <a href="#" class="news1 newsframe">
+          <a href="https://arise.meson.tokyo/" class="news1 newsframe">
             <img src="image/ex_icon_pr.png" alt="" class="news_icon">
-            <span class="newsCont date">2019.11</span>
-            <span class="newsCont title">異能vationアワード部門 企業特別賞 受賞!</span>
+            <span class="newsCont date">2019.12</span>
+            <span class="newsCont title">Spatial Experience Summit ARISE#2 出展</span>
           </a>
-          <a href="#" class="news2 newsframe">
+          <a href="https://hl2019.we-are-ma.jp/award/" class="news2 newsframe">
             <img src="image/ex_icon_pr.png" alt="" class="news_icon">
-            <p class="newsCont date">2019.12</p>
-            <p class="newsCont title">ヒーローズリーグAWARD Unity賞 受賞!</p>
+            <span class="newsCont date">2019.12</span>
+            <span class="newsCont title">ヒーローズリーグAWARD Unity賞 受賞</span>
           </a>
-          <a href="#" class="news3 newsframe">
+          <a href="http://www.ntv.co.jp/nextcreators/backnumber/creator88.html" class="news3 newsframe">
             <img src="image/ex_icon_tv.png" alt="" class="news_icon">
-            <p class="newsCont date">2019.11</p>
-            <p class="newsCont title">異能vationアワード部門 企業特別賞 受賞!</p>
+            <span class="newsCont date">2019.06</span>
+            <span class="newsCont title">日本テレビ「nextクリエイターズ」出演</span>
           </a>
-          <!--
-          <a href="#" class="btnMore newsMore whiteNon" style="text-decoration:none;">
-            <p>もっと見る<i class="fas fa-angle-right"></i></p>
-          </a>
-          -->
+
         </div>
         <a href="other/exhibition.html" >
           <img src="image/btn_more03.png" alt="もっとみる" class="more">
@@ -72,7 +67,7 @@
           </div>
 
           <div class="tile tile50">
-            <a href="product/inaiinai_ehon.html">
+            <a href="product/spellmaster.html">
             <img src="image/pro_sm01.png" alt="spellmaster" class="thumbnail">
           </a>
             <a href="product/inaiinai_ehon.html" class="blackNon">
@@ -83,7 +78,7 @@
           </div>
 
           <div class="tile tile33">
-            <a href="product/inaiinai_ehon.html">
+            <a href="product/skyletter.html">
             <img src="image/pro_sl02.jpg" alt="skyletter" class="thumbnail">
           </a>
             <a href="product/inaiinai_ehon.html" class="blackNon">
@@ -94,10 +89,10 @@
           </div>
 
           <div class="tile tile33">
-            <a href="product/inaiinai_ehon.html">
+            <a href="product/chizuma.html">
             <img src="image/pro_ch01.png" alt="CHIZUMA" class="thumbnail">
-          </a>
-              <a href="product/inaiinai_ehon.html" class="blackNon">
+            </a>
+              <a href="product/chizuma.html" class="blackNon">
               <p class="title Name">CHIZUMA</p>
               <p class="title">/</p>
               <p class="title Year">2017</p>
@@ -105,10 +100,10 @@
           </div>
 
           <div class="tile tile33">
-            <a href="product/inaiinai_ehon.html">
+            <a href="product/paintar.html">
             <img src="image/pro_pt01.jpg" alt="PAINTAR" class="thumbnail">
-          </a>
-            <a href="product/inaiinai_ehon.html" class="blackNon">
+            </a>
+            <a href="product/paintar.html" class="blackNon">
               <span class="title Name">PAINTAR</span>
               <span class="title">/</span>
               <span class="title Year">2016</span>
@@ -132,17 +127,16 @@
           <img src="image/ab_kiyo.png" alt="KIYO" class="aboutPhoto">
           <img src="image/ab_mizu.png" alt="MIZUKI" class="aboutPhoto">
           <div class="aboutTexts">
-              <h3>アナログ・デジタル<br>
-              いいとこどりのものづくり</h3>
-              <p>はじめまして。ものづくりユニット「カタコト」です。
-              ARアプリの企画を中心に「AR/VRプロダクト」「スマートトイ」
+              <h3>わたしたち カタコトは<br>
+              「体験」にこだわった ものづくりユニット</h3>
+              <p>ARアプリの企画を中心に「AR/VRプロダクト」「スマートトイ」
               「インスタレーション」の制作を行なっています。</p>
               <p>画面の中だけでない「体験すること」を大切に
               見て触って楽しめるプロダクトを生み出していきます。</p>
           </div>
           <div class="aboutLink">
-          <a href="#" class="twbtn whiteNon"><i class="fab fa-twitter"></i><p>KIYOTAKA WATANABE</p></a>
-          <a href="#" class="twbtn whiteNon"><i class="fab fa-twitter"></i><p>MIZUKI MATSUI</p></a>
+          <a href="https://twitter.com/kiyossy0715" target="_blank" class="twbtn whiteNon"><i class="fab fa-twitter"></i><p>KIYOTAKA WATANABE</p></a>
+          <a href="https://twitter.com/mizuki_yzk" target="_blank" class="twbtn whiteNon"><i class="fab fa-twitter"></i><p>MIZUKI MATSUI</p></a>
           </div>
         </div>
       </div>
@@ -164,7 +158,7 @@
           <input type="email" value="◯◯◯@◇◇◇.com" class="box box1">
           <p>お問い合わせ内容</p>
           <textarea name="name" rows="8" cols="80" class="box box2"></textarea>
-          <input type="submit" value="メッセージを送る" class="send" >
+          <input type="submit" value="メッセージを送る" class="send">
         </div>
       </div>
     </div>
