--- a/other/product_list.html
+++ b/other/product_list.html
@@ -6,13 +6,15 @@
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:500&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <title>KATAKOTO カタコト</title>
+    <link rel="shortcut icon" href="../image/favicon.ico">
   </head>
   <body>
+
 <div id="product_list">
   <div class="frame clearfix">
     <a href="../index.html"><img src="../image/btn_back04.png" alt="トップにもどる" class="back2"></a>
+
     <p class="type">AR</p>
-
     <div class="content">
       <div class="frame clearfix">
         <div class="tiles clearfix">
@@ -26,100 +28,47 @@
               <p class="title Year">2019</p>
             </a>
           </div>
-
           <div class="tile tile50">
-            <a href="../product/inaiinai_ehon.html">
+            <a href="../product/spellmaster.html">
             <img src="../image/pro_sm01.png" alt="spellmaster" class="thumbnail">
-          </a>
+            </a>
             <a href="../product/inaiinai_ehon.html" class="blackNon">
               <p class="title Name">SPELL MASTER</p>
               <p class="title">/</p>
               <p class="title Year">2018</p>
             </a>
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="content">
-      <div class="frame clearfix">
-        <div class="tiles clearfix">
           <div class="tile tile50">
-            <a href="../product/inaiinai_ehon.html">
-              <img src="../image/pro_inai01.png" alt="inaiinaiehon" class="thumbnail" >
+            <a href="../product/skyletter.html">
+            <img src="../image/pro_sl02.jpg" alt="skyletter" class="thumbnail">
             </a>
-            <a href="../product/inaiinai_ehon.html" class="blackNon">
-              <p class="title Name">いないいない絵本</p>
+            <a href="../product/skyletter.html" class="blackNon">
+              <p class="title Name">SkyLetter</p>
               <p class="title">/</p>
               <p class="title Year">2019</p>
             </a>
           </div>
-
           <div class="tile tile50">
-            <a href="../product/inaiinai_ehon.html">
-            <img src="../image/pro_sm01.png" alt="spellmaster" class="thumbnail">
-          </a>
-            <a href="../product/inaiinai_ehon.html" class="blackNon">
-              <p class="title Name">SPELL MASTER</p>
-              <p class="title">/</p>
-              <p class="title Year">2018</p>
+            <a href="../product/chizuma.html">
+            <img src="../image/pro_ch01.png" alt="CHIZUMA" class="thumbnail">
             </a>
+              <a href="../product/chizuma.html" class="blackNon">
+              <p class="title Name">CHIZUMA</p>
+              <p class="title">/</p>
+              <p class="title Year">2017</p>
+              </a>
           </div>
-        </div>
-      </div>
-    </div>
-
-    <p class="type">HARDWEAR</p>
-    <div class="content">
-      <div class="frame clearfix">
-        <div class="tiles clearfix">
           <div class="tile tile50">
-            <a href="../product/inaiinai_ehon.html">
-              <img src="../image/pro_inai01.png" alt="inaiinaiehon" class="thumbnail" >
+            <a href="../product/paintar.html">
+            <img src="../image/pro_pt01.jpg" alt="PAINTAR" class="thumbnail">
             </a>
-            <a href="../product/inaiinai_ehon.html" class="blackNon">
-              <p class="title Name">いないいない絵本</p>
-              <p class="title">/</p>
-              <p class="title Year">2019</p>
+            <a href="../product/paintar.html" class="blackNon">
+              <span class="title Name">PAINTAR</span>
+              <span class="title">/</span>
+              <span class="title Year">2016</span>
             </a>
           </div>
 
-          <div class="tile tile50">
-            <a href="../product/inaiinai_ehon.html">
-            <img src="../image/pro_sm01.png" alt="spellmaster" class="thumbnail">
-          </a>
-            <a href="../product/inaiinai_ehon.html" class="blackNon">
-              <p class="title Name">SPELL MASTER</p>
-              <p class="title">/</p>
-              <p class="title Year">2018</p>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="content">
-      <div class="frame clearfix">
-        <div class="tiles clearfix">
-          <div class="tile tile50">
-            <a href="../product/inaiinai_ehon.html">
-              <img src="../image/pro_inai01.png" alt="inaiinaiehon" class="thumbnail" >
-            </a>
-            <a href="../product/inaiinai_ehon.html" class="blackNon">
-              <p class="title Name">いないいない絵本</p>
-              <p class="title">/</p>
-              <p class="title Year">2019</p>
-            </a>
-          </div>
-
-          <div class="tile tile50">
-            <a href="../product/inaiinai_ehon.html">
-            <img src="../image/pro_sm01.png" alt="spellmaster" class="thumbnail">
-          </a>
-            <a href="../product/inaiinai_ehon.html" class="blackNon">
-              <p class="title Name">SPELL MASTER</p>
-              <p class="title">/</p>
-              <p class="title Year">2018</p>
-            </a>
-          </div>
         </div>
       </div>
     </div>
@@ -130,24 +79,53 @@
       <div class="frame clearfix">
         <div class="tiles clearfix">
           <div class="tile tile50">
-            <a href="../product/inaiinai_ehon.html">
-              <img src="../image/pro_inai01.png" alt="inaiinaiehon" class="thumbnail" >
+            <a href="../product/snipetown.html">
+              <img src="../image/pro_st03.jpg" alt="inaiinaiehon" class="thumbnail" >
             </a>
-            <a href="../product/inaiinai_ehon.html" class="blackNon">
-              <p class="title Name">いないいない絵本</p>
+            <a href="../product/snipetown.html" class="blackNon">
+              <p class="title Name">SNIPE TOWN</p>
+              <p class="title">/</p>
+              <p class="title Year">2018</p>
+            </a>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
+    <p class="type">OTHER</p>
+    <div class="content">
+      <div class="frame clearfix">
+        <div class="tiles clearfix">
+          <div class="tile tile50">
+            <a href="../product/mirrornotes.html">
+            <img src="../image/pro_mn03.jpg" alt="mirrornotes" class="thumbnail">
+            </a>
+            <a href="../product/mirrornotes.html" class="blackNon">
+              <p class="title Name">mirror notes</p>
+              <p class="title">/</p>
+              <p class="title Year">2017</p>
+            </a>
+          </div>
+          <div class="tile tile50">
+            <a href="../product/kaquremon.html">
+            <img src="../image/pro_kq01.png" alt="kaquremon" class="thumbnail">
+            </a>
+            <a href="../product/kaquremon.html" class="blackNon">
+              <p class="title Name">かくれもん</p>
               <p class="title">/</p>
               <p class="title Year">2019</p>
             </a>
           </div>
-
           <div class="tile tile50">
-            <a href="../product/inaiinai_ehon.html">
-            <img src="../image/pro_sm01.png" alt="spellmaster" class="thumbnail">
-          </a>
-            <a href="../product/inaiinai_ehon.html" class="blackNon">
-              <p class="title Name">SPELL MASTER</p>
+            <a href="../product/magicloop.html">
+            <img src="../image/pro_ml04.gif" alt="magicloop" class="thumbnail">
+            </a>
+            <a href="../product/magicloop.html" class="blackNon">
+              <p class="title Name">MagicLoop</p>
               <p class="title">/</p>
-              <p class="title Year">2018</p>
+              <p class="title Year">2017</p>
             </a>
           </div>
         </div>
@@ -157,7 +135,9 @@
 
   </div>
   </div>
+
   </body>
+
   <footer>
     <div class="frame" >
       <a class="footLogo" href="../index.html">
