--- a/product/inaiinai_ehon.html
+++ b/product/inaiinai_ehon.html
@@ -6,19 +6,18 @@
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:500&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <title>KATAKOTO カタコト</title>
+    <link rel="shortcut icon" href="../image/favicon.ico">
   </head>
-<body id="product">
-<div class="top">
-  <div class="topBlock">
-    <a href="../index.html">
-      <img src="../image/btn_back03.png" alt="トップにもどる" class="back">
-    </a>
+<body id="product" >
+  <div class="productTop">
+    <img src="../image/pro_inai01.png" alt="" class="topImage">
+    <div class="productTopBlock">
+    <a href="../index.html"><img src="../image/btn_back03.png" alt="トップにもどる" class="back "></a>
     <img src="../image/pro_inai_logo.png" alt="" class="proLogo">
     <h2>「物語の主人公になりきる」 から 「物語の一部」へ</h2>
-    <h2>いないいない絵本の世界は<br>
-      なにかがいない物語</h2>
+    <h2>いないいない絵本の世界は なにかがいない物語</h2>
+    </div>
   </div>
-</div>
 
 <div class="contents">
   <div class="frame">
@@ -53,15 +52,12 @@
     <div class="frame">
   <div class="award ex">
     <h4>受賞 award</h4>
-    <p><img src="../image/dot01.png" alt="" class="dot">異能vationジェネレーションアワード部門 企業特別賞 受賞!</p>
-    <p><img src="../image/dot01.png" alt="" class="dot">ヒーローズリーグAWARD Unity賞 受賞</p>
-    <p><img src="../image/dot01.png" alt="" class="dot">異能vationジェネレーションアワード部門</p>
+
   </div>
   <div class="exhibition ex">
     <h4>展示 exhibition</h4>
-    <p><img src="../image/dot01.png" alt="" class="dot">異能vationジェネレーションアワード部門 企業特別賞 受賞!</p>
-    <p><img src="../image/dot01.png" alt="" class="dot">ヒーローズリーグAWARD Unity賞 受賞</p>
-    <p><img src="../image/dot01.png" alt="" class="dot">異能vationジェネレーションアワード部門</p>
+    <p><img src="../image/dot01.png" alt="" class="dot">Spatial Experience Summit「ARISE #2」（2019.12）</p>
+
   </div>
   </div>
   </div>
