--- a/other/privacy.html
+++ b/other/privacy.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:500&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <title>KATAKOTO カタコト</title>
+    <link rel="shortcut icon" href="../image/favicon.ico">
   </head>
   <body id="privacy">
 
