--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <title>KATAKOTO カタコト</title>
     <link rel="shortcut icon" href="image/favicon.ico">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
 
   <body>
@@ -124,9 +125,17 @@
     <div class="about">
       <div class="frame">
         <div class="aboutframe">
-          <img src="image/ab_kiyo.png" alt="KIYO" class="aboutPhoto">
-          <img src="image/ab_mizu.png" alt="MIZUKI" class="aboutPhoto">
+          <img src="image/ab_kiyo.png" alt="KIYO" class="aboutPhoto kiyoPhoto">
+          <img src="image/ab_mizu.png" alt="MIZUKI" class="aboutPhoto mizukiPhoto">
           <div class="aboutTexts">
+              <h3>わたしたち カタコトは<br>
+              「体験」にこだわった ものづくりユニット</h3>
+              <p>ARアプリの企画を中心に「AR/VRプロダクト」「スマートトイ」
+              「インスタレーション」の制作を行なっています。</p>
+              <p>画面の中だけでない「体験すること」を大切に
+              見て触って楽しめるプロダクトを生み出していきます。</p>
+          </div>
+          <div class="aboutTexts_sp">
               <h3>わたしたち カタコトは<br>
               「体験」にこだわった ものづくりユニット</h3>
               <p>ARアプリの企画を中心に「AR/VRプロダクト」「スマートトイ」
