--- a/product/chizuma.html
+++ b/product/chizuma.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:500&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <title>KATAKOTO カタコト</title>
+    <link rel="shortcut icon" href="../image/favicon.ico">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
 <body id="product">
   <div class="productTop">
