--- a/other/privacy.html
+++ b/other/privacy.html
@@ -7,6 +7,7 @@
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <title>KATAKOTO カタコト</title>
     <link rel="shortcut icon" href="../image/favicon.ico">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
   <body id="privacy">
 
